# st-device-sdk-c-ref

./: .gitmodules  README.md
apps/bk7236/light_example/: CMakeLists.txt  README.md
apps/bk7236/light_example/config/bk7236/: config
apps/bk7236/light_example/main/: CMakeLists.txt  device_control.c  device_control.h  main.c
apps/bk7236/switch_example/: CMakeLists.txt  README.md
apps/bk7236/switch_example/config/bk7236/: config
apps/bk7236/switch_example/main/: CMakeLists.txt  Kconfig  device_control.c  device_control.h  main.c
apps/bl602/light_example/: proj_config.mk
apps/esp32/light_example/main/: main.c
apps/esp32/ota_demo/main/: main.c
apps/esp32/switch_example/main/: device_info.json  main.c
doc/: capability_helper_guide.md
patches/bk7236/: 0001-Enable-stdk-compile-in-armino-idk.patch  0002-Modify-cJSON-for-stdk.patch  0003-Optimize-armino-env-setup-script-for-stdk.patch  0004-Modify-freertos-configuration-for-stdk.patch
patches/bl602/: 0001-add-stdk-compile-modifications-for-bl602.patch
tools/bk7236/: build_bk7236.py  build_bk7236.sh  monitor.py  setup_bk7236.py  setup_bk7236.sh
